--- a/bee-productive-backend/.gitignore
+++ b/bee-productive-backend/.gitignore
@@ -35,3 +35,5 @@ build/
 src/main/resources/application.properties
 src/main/resources/application-dev.properties
 src/main/resources/application-prod.properties
+
+firebase-key.json
